cmake_minimum_required(VERSION 2.8)
project(ECF)

# try this if environment variable is not set
set (BOOST_ROOT "C:/Program Files/boost_1_74_0")

find_package(Boost)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
else()
    message(STATUS "Cannot find Boost! Try setting the include dir manually above")
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ../debug)
endif()
if(CMAKE_BUILD_TYPE STREQUAL "Release")
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ../release)
endif()

set(SOURCE_FILES
    ECF/apgenotype/APGenotype.h
    ECF/apgenotype/APGenotype.cpp
    ECF/apgenotype/PrimitiveSetAP.h
    ECF/apgenotype/PrimitiveSetAP.cpp
    ECF/binary/Binary.cpp
    ECF/binary/Binary.h
    ECF/binary/BinaryCrsHalfUniform.cpp
    ECF/binary/BinaryCrsHalfUniform.h
    ECF/binary/BinaryCrsMasked.cpp
    ECF/binary/BinaryCrsMasked.h
    ECF/binary/BinaryCrsNonGeometric.cpp
    ECF/binary/BinaryCrsNonGeometric.h
    ECF/binary/BinaryCrsOnePoint.cpp
    ECF/binary/BinaryCrsOnePoint.h
    ECF/binary/BinaryCrsRandomRespectful.cpp
    ECF/binary/BinaryCrsRandomRespectful.h
    ECF/binary/BinaryCrsReducedSurrogate.cpp
    ECF/binary/BinaryCrsReducedSurrogate.h
    ECF/binary/BinaryCrsSegmented.cpp
    ECF/binary/BinaryCrsSegmented.h
    ECF/binary/BinaryCrsShuffle.cpp
    ECF/binary/BinaryCrsShuffle.h
    ECF/binary/BinaryCrsTwoPoint.cpp
    ECF/binary/BinaryCrsTwoPoint.h
    ECF/binary/BinaryCrsUniform.cpp
    ECF/binary/BinaryCrsUniform.h
    ECF/binary/BinaryMutMix.cpp
    ECF/binary/BinaryMutMix.h
    ECF/binary/BinaryMutSimple.cpp
    ECF/binary/BinaryMutSimple.h
    ECF/bitstring/BitString.h
    ECF/bitstring/BitStringCrsOnePoint.cpp
    ECF/bitstring/BitStringCrsOnePoint.h
    ECF/bitstring/BitStringCrsUniform.cpp
    ECF/bitstring/BitStringCrsUniform.h
    ECF/bitstring/BitStringMutMix.cpp
    ECF/bitstring/BitStringMutMix.h
    ECF/bitstring/BitStringMutSimple.cpp
    ECF/bitstring/BitStringMutSimple.h
    ECF/cartesian/Add.h
    ECF/cartesian/And.h
    ECF/cartesian/Cartesian.cpp
    ECF/cartesian/Cartesian.h
    ECF/cartesian/Cartesian_c.h
    ECF/cartesian/CartesianCrsOnePoint.cpp
    ECF/cartesian/CartesianCrsOnePoint.h
    ECF/cartesian/CartesianMutOnePoint.cpp
    ECF/cartesian/CartesianMutOnePoint.h
    ECF/cartesian/Cos.h
    ECF/cartesian/Div.h
    ECF/cartesian/Function.h
    ECF/cartesian/FunctionSet.cpp
    ECF/cartesian/FunctionSet.h
    ECF/cartesian/Mul.h
    ECF/cartesian/Not.h
    ECF/cartesian/Or.h
    ECF/cartesian/Sin.h
    ECF/cartesian/Sub.h
    ECF/cartesian/Xnor.h
    ECF/cartesian/Xor.h
    ECF/floatingpoint/FloatingPoint.cpp
    ECF/floatingpoint/FloatingPoint.h
    ECF/floatingpoint/FloatingPointCrsArithmetic.cpp
    ECF/floatingpoint/FloatingPointCrsArithmetic.h
    ECF/floatingpoint/FloatingPointCrsArithmeticSimple.cpp
    ECF/floatingpoint/FloatingPointCrsArithmeticSimple.h
    ECF/floatingpoint/FloatingPointCrsArithmeticSingle.cpp
    ECF/floatingpoint/FloatingPointCrsArithmeticSingle.h
    ECF/floatingpoint/FloatingPointCrsAverage.cpp
    ECF/floatingpoint/FloatingPointCrsAverage.h
    ECF/floatingpoint/FloatingPointCrsBga.cpp
    ECF/floatingpoint/FloatingPointCrsBga.h
    ECF/floatingpoint/FloatingPointCrsBlx.cpp
    ECF/floatingpoint/FloatingPointCrsBlx.h
    ECF/floatingpoint/FloatingPointCrsBlxAlpha.cpp
    ECF/floatingpoint/FloatingPointCrsBlxAlpha.h
    ECF/floatingpoint/FloatingPointCrsBlxAlphaBeta.cpp
    ECF/floatingpoint/FloatingPointCrsBlxAlphaBeta.h
    ECF/floatingpoint/FloatingPointCrsDiscrete.cpp
    ECF/floatingpoint/FloatingPointCrsDiscrete.h
    ECF/floatingpoint/FloatingPointCrsFlat.cpp
    ECF/floatingpoint/FloatingPointCrsFlat.h
    ECF/floatingpoint/FloatingPointCrsHeuristic.cpp
    ECF/floatingpoint/FloatingPointCrsHeuristic.h
    ECF/floatingpoint/FloatingPointCrsLocal.cpp
    ECF/floatingpoint/FloatingPointCrsLocal.h
    ECF/floatingpoint/FloatingPointCrsOnePoint.cpp
    ECF/floatingpoint/FloatingPointCrsOnePoint.h
    ECF/floatingpoint/FloatingPointCrsRandom.cpp
    ECF/floatingpoint/FloatingPointCrsRandom.h
    ECF/floatingpoint/FloatingPointCrsSbx.cpp
    ECF/floatingpoint/FloatingPointCrsSbx.h
    ECF/floatingpoint/FloatingPointMutSimple.cpp
    ECF/floatingpoint/FloatingPointMutSimple.h
    ECF/permutation/Permutation.cpp
    ECF/permutation/Permutation.h
    ECF/permutation/PermutationCrsCOSA.cpp
    ECF/permutation/PermutationCrsCOSA.h
    ECF/permutation/PermutationCrsCyclic.cpp
    ECF/permutation/PermutationCrsCyclic.h
    ECF/permutation/PermutationCrsCyclic2.cpp
    ECF/permutation/PermutationCrsCyclic2.h
    ECF/permutation/PermutationCrsDPX.cpp
    ECF/permutation/PermutationCrsDPX.h
    ECF/permutation/PermutationCrsOBX.cpp
    ECF/permutation/PermutationCrsOBX.h
    ECF/permutation/PermutationCrsOPX.cpp
    ECF/permutation/PermutationCrsOPX.h
    ECF/permutation/PermutationCrsOX.cpp
    ECF/permutation/PermutationCrsOX.h
    ECF/permutation/PermutationCrsOX2.cpp
    ECF/permutation/PermutationCrsOX2.h
    ECF/permutation/PermutationCrsPBX.cpp
    ECF/permutation/PermutationCrsPBX.h
    ECF/permutation/PermutationCrsPMX.cpp
    ECF/permutation/PermutationCrsPMX.h
    ECF/permutation/PermutationCrsSPX.cpp
    ECF/permutation/PermutationCrsSPX.h
    ECF/permutation/PermutationCrsULX.cpp
    ECF/permutation/PermutationCrsULX.h
    ECF/permutation/PermutationCrsUPMX.cpp
    ECF/permutation/PermutationCrsUPMX.h
    ECF/permutation/PermutationMutIns.cpp
    ECF/permutation/PermutationMutIns.h
    ECF/permutation/PermutationMutInv.cpp
    ECF/permutation/PermutationMutInv.h
    ECF/permutation/PermutationMutToggle.cpp
    ECF/permutation/PermutationMutToggle.h
    ECF/tree/Add.h
    ECF/tree/Cos.cpp
    ECF/tree/Cos.h
    ECF/tree/Div.h
    ECF/tree/Max.h
    ECF/tree/Min.h
    ECF/tree/Mul.h
    ECF/tree/Neg.h
    ECF/tree/Node.cpp
    ECF/tree/Node.h
    ECF/tree/Pos.h
    ECF/tree/Primitive.cpp
    ECF/tree/Primitive.h
    ECF/tree/PrimitiveSet.cpp
    ECF/tree/PrimitiveSet.h
    ECF/tree/Sin.cpp
    ECF/tree/Sin.h
    ECF/tree/Sub.h
    ECF/tree/Terminal.h
    ECF/tree/Tree.cpp
    ECF/tree/Tree.h
    ECF/tree/Tree_c.h
    ECF/tree/TreeCrxContextPreserved.cpp
    ECF/tree/TreeCrxContextPreserved.h
    ECF/tree/TreeCrxOnePoint.cpp
    ECF/tree/TreeCrxOnePoint.h
    ECF/tree/TreeCrxSimple.cpp
    ECF/tree/TreeCrxSimple.h
    ECF/tree/TreeCrxSizeFair.cpp
    ECF/tree/TreeCrxSizeFair.h
    ECF/tree/TreeCrxUniform.cpp
    ECF/tree/TreeCrxUniform.h
    ECF/tree/TreeMutGauss.cpp
    ECF/tree/TreeMutGauss.h
    ECF/tree/TreeMutHoist.cpp
    ECF/tree/TreeMutHoist.h
    ECF/tree/TreeMutNodeComplement.cpp
    ECF/tree/TreeMutNodeComplement.h
    ECF/tree/TreeMutNodeReplace.cpp
    ECF/tree/TreeMutNodeReplace.h
    ECF/tree/TreeMutPermutation.cpp
    ECF/tree/TreeMutPermutation.h
    ECF/tree/TreeMutShrink.cpp
    ECF/tree/TreeMutShrink.h
    ECF/tree/TreeMutSubtree.cpp
    ECF/tree/TreeMutSubtree.h
    ECF/xcs/AlgXCS.cpp
    ECF/xcs/AlgXCS.h
    ECF/xcs/Classifier.cpp
    ECF/xcs/Classifier.h
    ECF/xcs/ClassifierParams.h
    ECF/xcs/Environment.cpp
    ECF/xcs/Environment.h
    ECF/xcs/XCSParams.cpp
    ECF/xcs/XCSParams.h
    ECF/xml/xmlParser.cpp
    ECF/xml/xmlParser.h
    ECF/AlgArtificialBeeColony.cpp
    ECF/AlgArtificialBeeColony.h
    ECF/AlgClonalg.cpp
    ECF/AlgClonalg.h
    ECF/AlgCuckooSearch.cpp
    ECF/AlgCuckooSearch.h
    ECF/AlgDifferentialEvolution.cpp
    ECF/AlgDifferentialEvolution.h
    ECF/AlgElimination.cpp
    ECF/AlgElimination.h
    ECF/AlgEvolutionStrategy.cpp
    ECF/AlgEvolutionStrategy.h
    ECF/AlgGeneticAnnealing.cpp
    ECF/AlgGeneticAnnealing.h
    ECF/AlgGenHookeJeeves.cpp
    ECF/AlgGenHookeJeeves.h
    ECF/AlgNSGA2.cpp
    ECF/AlgNSGA2.h
    ECF/AlgOptIA.cpp
    ECF/AlgOptIA.h
    ECF/Algorithm.cpp
    ECF/Algorithm.h
    ECF/AlgParticleSwarmOptimization.cpp
    ECF/AlgParticleSwarmOptimization.h
    ECF/AlgRandomSearch.cpp
    ECF/AlgRandomSearch.h
    ECF/AlgRouletteWheel.cpp
    ECF/AlgRouletteWheel.h
    ECF/AlgSteadyStateTournament.cpp
    ECF/AlgSteadyStateTournament.h
    ECF/Communicator.cpp
    ECF/Communicator.h
    ECF/Context.h
    ECF/Crossover.cpp
    ECF/Crossover.h
    ECF/Deme.cpp
    ECF/Deme.h
    ECF/ECF.h
    ECF/ECF_base.h
    ECF/ECF_derived.h
    ECF/ECF_macro.h
    ECF/EvaluateOp.h
    ECF/Fitness.h
    ECF/FitnessMax.cpp
    ECF/FitnessMax.h
    ECF/FitnessMin.cpp
    ECF/FitnessMin.h
    ECF/Genotype.cpp
    ECF/Genotype.h
    ECF/HallOfFame.cpp
    ECF/HallOfFame.h
    ECF/Individual.cpp
    ECF/Individual.h
    ECF/Logger.cpp
    ECF/Logger.h
    ECF/Migration.cpp
    ECF/Migration.h
    ECF/MOFitness.cpp
    ECF/MOFitness.h
    ECF/Mutation.cpp
    ECF/Mutation.h
    ECF/Operator.h
    ECF/ParallelAlgorithm.h
    ECF/Population.cpp
    ECF/Population.h
    ECF/Randomizer.h
    ECF/RealValueGenotype.h
    ECF/Registry.cpp
    ECF/Registry.h
    ECF/SelBestOp.cpp
    ECF/SelBestOp.h
    ECF/SelectionOperator.h
    ECF/SelFitnessProportionalOp.cpp
    ECF/SelFitnessProportionalOp.h
    ECF/SelRandomOp.cpp
    ECF/SelRandomOp.h
    ECF/SelWorstOp.cpp
    ECF/SelWorstOp.h
    ECF/SimpleRandomizer.cpp
    ECF/SimpleRandomizer.h
    ECF/StatCalc.cpp
    ECF/StatCalc.h
    ECF/State.cpp
    ECF/State.h
    ECF/TermFitnessValOp.cpp
    ECF/TermFitnessValOp.h
    ECF/TermMaxEvalOp.cpp
    ECF/TermMaxEvalOp.h
    ECF/TermMaxGenOp.cpp
    ECF/TermMaxGenOp.h
    ECF/TermMaxTimeOp.cpp
    ECF/TermMaxTimeOp.h
    ECF/TermStagnationOp.cpp
    ECF/TermStagnationOp.h)

add_library(ECF ${SOURCE_FILES})

set_target_properties(ECF
        PROPERTIES PREFIX "lib"
        SUFFIX ".a")
